cleaned up/simplified the home page & changed favicon

--- a/mean/public/modules/core/views/home.client.view.html
+++ b/mean/public/modules/core/views/home.client.view.html
@@ -1,37 +1,19 @@
 <section data-ng-controller="HomeController">
-	<div class="jumbotron text-center">
-		<div class="row">
-			<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
-				<img alt="NGS_LIMS" class="img-responsive text-center" src="modules/core/img/brand/NGSLogo.jpg" />
-			</div>
-		</div>
-		<br>
-		<div class="row">
-			<p class="lead">
-				Open-Source Laboratory Information Management System for Next-Generation Sequencing
-			</p>
-		</div>
-		<div class="row">
-			<p>
-				<a class="btn btn-primary btn-lg" href="/#!/projects" target="_self">Continue to Projects</a>
-			</p>
-			<p> 
-				THIS IS A PLACE HOLDER FOR LOGIN SCREEN
-			</p>
-		</div>
-	</div>
-	<div>
-		<h2>Welcome to LIMS for Next-Generation Sequencing.</h2>
-		<p>This application tracks samples, organisms, and projects status.</p>
-		<ul>
-			<li>
-				Click
-				<em>Login</em>
-				to get started with your projects.
-			</li>
-		</ul>
-	</div>
-		
-	<br>Any problems, please file an issue at:
-	<br>https://github.com/dejesus2010/CEN3031Project
+	<div class="text-center">
+    <br>
+    <h3>
+        Welcome to the Next-Generation Sequencing LIMS!
+    </h3>
+    <br>
+    <img alt="NGS_LIMS" class="img-responsive img-rounded" src="modules/core/img/brand/NGSLogo.jpg" style="margin: 0 auto;" />
+    <br>
+        <h4>Open-Source Laboratory Information Management System</h4>
+    <br>
+        <a class="btn btn-primary btn-lg" href="/#!/projects" target="_self">Continue to Projects</a>
+	<br>
+    <br>
+        If you encountary any problems, please file an issue on our github page:
+    <br>
+	<a href="https://github.com/dejesus2010/CEN3031Project">https://github.com/dejesus2010/CEN3031Project</a>
+    </div>
 </section>
