Deleted extra quote in the project view page.

--- a/mean/public/modules/projects/views/view-project.client.view.html
+++ b/mean/public/modules/projects/views/view-project.client.view.html
@@ -1,5 +1,5 @@
 <section data-ng-controller="ProjectsController" data-ng-init="findOne()">
-    <div class="page-header"">
+    <div class="page-header">
     <h2 class="text-center">Manage Project</h2>
     </div>
 
