--- a/mean/public/modules/customers/views/create-customer.client.view.html
+++ b/mean/public/modules/customers/views/create-customer.client.view.html
@@ -2,7 +2,7 @@
 	<div class="page-header">
 		<h1>New Customer</h1>
 	</div>
-	<div class="col-md-12">
+	<div class="col-md-4 col-md-offset-4">
 		<form name="customerForm" class="form-horizontal" data-ng-submit="create()" novalidate>
 			<fieldset>
 				<div class="form-group" ng-class="{ 'has-error': customerForm.title.$dirty && customerForm.title.$invalid }">
@@ -23,7 +23,7 @@
 						<div name="id" data-ng-bind="newCustomerId()" id="id" class="form-control" cols="30" rows="10" placeholder="id" ng-readOnly="true"></div>
 					</div>
 				</div>
-				<div class="form-group">
+				<div class="form-group text-center">
 					<input type="submit" class="btn btn-default">&nbsp
 					<a href back-button class="btn btn-default">Back</a>
 				</div>
