--- a/mean/public/modules/organisms/views/create-organism.client.view.html
+++ b/mean/public/modules/organisms/views/create-organism.client.view.html
@@ -1,11 +1,11 @@
-<section data-ng-controller="SpeciesController">
+<section data-ng-controller="OrganismController">
 	<div class="page-header">
 		<h1>New Organism</h1>
 	</div>
-	<div class="col-md-12">
-		<form name="specieForm" class="form-horizontal" data-ng-submit="create()" novalidate>
+	<div class="col-md-4 col-md-offset-4">
+		<form name="organismForm" class="form-horizontal" data-ng-submit="create()" novalidate>
 			<fieldset>
-				<div class="form-group" ng-class="{ 'has-error': specieForm.title.$dirty && specieForm.title.$invalid }">
+				<div class="form-group" ng-class="{ 'has-error': organismForm.title.$dirty && organismForm.title.$invalid }">
 					<label class="control-label" for="name">Name</label>
 					<div class="controls">
 						<input name="name" type="text" data-ng-model="name" id="name" class="form-control" placeholder="Name" required>
@@ -14,10 +14,10 @@
 				<div class="form-group">
 					<label class="control-label" for="id">ID</label>
 					<div class="controls">
-						<div name="id" data-ng-bind="newSpecieId()" id="id" class="form-control" cols="30" rows="10" placeholder="id" ng-readOnly="true"></div>
+						<div name="id" data-ng-bind="newOrganismId()" id="id" class="form-control" cols="30" rows="10" placeholder="id" ng-readOnly="true"></div>
 					</div>
 				</div>
-				<div class="form-group">
+				<div class="form-group text-center">
 					<input type="submit" class="btn btn-default">&nbsp
 					<a href back-button class="btn btn-default">Back</a>
 				</div>
