--- a/mean/public/modules/organisms/views/organisms.client.view.html
+++ b/mean/public/modules/organisms/views/organisms.client.view.html
@@ -1,3 +1,3 @@
-<section data-ng-controller="SpeciesController">
+<section data-ng-controller="OrganismController">
 	This is the Organisms view
 </section>
