--- a/mean/public/modules/projects/views/view-project.client.view.html
+++ b/mean/public/modules/projects/views/view-project.client.view.html
@@ -32,12 +32,15 @@
                 <i class="glyphicon glyphicon-trash"></i>
             </a>
         </div>
+	<hr>
+	<a class="btn btn-primary" href="">
+		Generate Plate Layout
+	</a>
     </div>
     <br>
     <div class="text-center">
         || Plate # | Latest Step | Date Updated | Next Step | Scan (start/end) ||
     </div>
-
 </section>
 
 <script type="text/ng-template" id="deleteConfirmDialog">
