--- a/mean/public/modules/projects/views/view-project.client.view.html
+++ b/mean/public/modules/projects/views/view-project.client.view.html
@@ -32,37 +32,32 @@
                 <i class="glyphicon glyphicon-trash"></i>
             </a>
         </div>
-	<hr>
     </div>
     <br>
-<<<<<<< HEAD
-    <div class="text-center">
-        <a class="btn btn-primary" data-ng-click="generatePlateTemplate()">
-            Generate Plate Template
-            <i class="glyphicon glyphicon-edit"></i>
-        </a>
     <div class="bs-callout" >
 	    <div class="row">
-		<div class="col-xs-4">
-			<label class="control-label" for="numberOfSamples">Enter Number of Samples </label>
-		</div>
-		<div class="col-xs-3">
-			<input data-ng-model="numberOfSamples" name="numberOfSamples" type="text" id="numberOfSamples" class="form-control"/>
-		</div>
-		<div class="col-xs-3">
-			<a class="btn btn-primary " data-ng-click="generatePlateTemplate()">
-				Generate Plate Template
-				<i class="glyphicon glyphicon-edit"></i>
-			</a>
-		</div>
+            <div class="col-xs-4">
+                <label class="control-label" for="numberOfSamples">Enter Number of Samples </label>
+            </div>
+            <div class="col-xs-3">
+                <input data-ng-model="numberOfSamples" name="numberOfSamples" type="text" id="numberOfSamples" class="form-control"/>
+            </div>
+            <div class="col-xs-3">
+                <a class="btn btn-primary " data-ng-click="generatePlateTemplate()">
+                    Generate Plate Template
+                    <i class="glyphicon glyphicon-edit"></i>
+                </a>
+            </div>
 	    </div>
-    </div>
-    <br>
-    <div class="text-center">
-        <a class="btn btn-primary" data-ng-click="generatePlates()">
-            Generate Plates From Excel
-            <i class="glyphicon glyphicon-edit"></i>
-        </a>
+        <br>
+        <div class="row">
+            <div class="text-center">
+                <a class="btn btn-primary" data-ng-click="generatePlates()">
+                    Generate Plates From Excel
+                    <i class="glyphicon glyphicon-edit"></i>
+                </a>
+            </div>
+        </div>
     </div>
     <br>
     <div class="text-center">
