Checking if user is logged in before routing to project list page

--- a/mean/public/modules/core/views/home.client.view.html
+++ b/mean/public/modules/core/views/home.client.view.html
@@ -9,7 +9,7 @@
     <br>
         <h4>Open-Source Laboratory Information Management System</h4>
     <br>
-        <a class="btn btn-primary btn-lg" href="/#!/projects" target="_self">Continue to Projects</a>
+        <a class="btn btn-primary btn-lg" ng-click="clicked()" target="_self">Continue to Projects</a>
 	<br>
     <br>
         If you encountary any problems, please file an issue on our github page:
