Highlight project that cursor is hovering over

--- a/mean/public/modules/projects/css/projects.css
+++ b/mean/public/modules/projects/css/projects.css
@@ -31,3 +31,10 @@ dl {
 }
 
 
+.ngReactGrid table tr:hover{
+    background: #dbdbdb;
+}
+
+.ngReactGrid table tr:nth-child(odd):hover td{
+    background: #dbdbdb;
+}
