Cursor changes to pointer when hovered over projects

--- a/mean/public/modules/projects/css/projects.css
+++ b/mean/public/modules/projects/css/projects.css
@@ -30,6 +30,10 @@ dl {
     margin-bottom: 0;
 }
 
+.ngReactGridBody:hover{
+    cursor: pointer;
+}
+
 
 .ngReactGrid table tr:hover{
     background: #dbdbdb;
