--- a/mean/public/modules/projects/css/projects.css
+++ b/mean/public/modules/projects/css/projects.css
@@ -30,4 +30,25 @@ dl {
     margin-bottom: 0;
 }
 
+.gray-out {
+    background-color: white;
+    filter:alpha(opacity=50); /* IE */
+    opacity: 0.5; /* Safari, Opera */
+    -moz-opacity:0.50; /* FireFox */
+    z-index: 20;
+    height: 100%;
+    width: 100%;
+    background-repeat:no-repeat;
+    background-position:center;
+}
 
+.ngdialog {
+    position:fixed;
+    top: 30%;
+    left: 50%;
+    width:30em;
+    height:18em;
+    margin-top: -9em;
+    margin-left: -15em;
+    z-index: 20;
+}
