Fixes issue #31. I love easy fixes :)

--- a/mean/public/modules/projects/views/edit-project.client.view.html
+++ b/mean/public/modules/projects/views/edit-project.client.view.html
@@ -4,7 +4,7 @@
 	</div>
 
     <div class="content">
-        <form class = "form-horizontal" data-ng-submit="update()" novalidate>
+        <form class = "form-horizontal" data-ng-submit="update()">
             <fieldset>
                 <div class="form-group">
                     <label class="control-label col-xs-4" for="projectCode">Project Code</label>
