--- a/mean/public/modules/projects/views/view-project.client.view.html
+++ b/mean/public/modules/projects/views/view-project.client.view.html
@@ -43,6 +43,10 @@
                         <span class="value-pair-left">Plates</span>
                         <span class="value-pair-right">{{project.plates.length}}</span>
                 </div>
+                <div class="overview-col-right">
+                        <span class="value-pair-left">Samples</span>
+                        <span class="value-pair-right" ng-bind="numSamples()"></span>
+                </div>
             </div>
             <div class="row overview-row">
                 <div class="overview-col-left">
