--- a/mean/public/modules/projects/views/list-projects.client.view.html
+++ b/mean/public/modules/projects/views/list-projects.client.view.html
@@ -2,6 +2,13 @@
 	<div class="page-header">
 		<h1>All Projects</h1>
 	</div>
+	<div role="navigation">
+		<ul class="nav nav-tabs">
+			<li class="tab" role="presentation" data-ng-class="{true: 'active', false: ''}[allProjectsActive]"><a data-ng-click="init()">All</a></li>
+			<li class="tab" role="presentation" data-ng-class="{true: 'active', false: ''}[openProjectsActive]"><a data-ng-click="showOpenProjects()">Open</a></li>
+			<li class="tab" role="presentation" data-ng-class="{true: 'active', false: ''}[closedProjectsActive]"><a data-ng-click="showClosedProjects()">Closed</a></li>
+		</ul>
+	</div>
 	<div ng-if="gridReady && projects.length && authentication.user">
 		<ng-react-grid grid="grid"></ng-react-grid>
 	</div>
