--- a/mean/public/modules/projects/views/list-projects.client.view.html
+++ b/mean/public/modules/projects/views/list-projects.client.view.html
@@ -4,9 +4,9 @@
 	</div>
 	<div role="navigation">
 		<ul class="nav nav-tabs">
-			<li class="tab" role="presentation" data-ng-class="{true: 'active', false: ''}[allProjectsActive]"><a data-ng-click="init()">All</a></li>
-			<li class="tab" role="presentation" data-ng-class="{true: 'active', false: ''}[openProjectsActive]"><a data-ng-click="showOpenProjects()">Open</a></li>
-			<li class="tab" role="presentation" data-ng-class="{true: 'active', false: ''}[closedProjectsActive]"><a data-ng-click="showClosedProjects()">Closed</a></li>
+			<li class="tab" role="presentation" data-ng-class="{true: 'active', false: ''}[allProjectsActive]"><a data-ng-click="showAllProjects()">All</a></li>
+			<li class="tab" role="presentation" data-ng-class="{true: 'active', false: ''}[openProjectsActive]"><a data-ng-click="showProjectsByStatus(false, true, false)">Open</a></li>
+			<li class="tab" role="presentation" data-ng-class="{true: 'active', false: ''}[closedProjectsActive]"><a data-ng-click="showProjectsByStatus(true, false, true)">Closed</a></li>
 		</ul>
 	</div>
 	<div ng-if="gridReady && projects.length && authentication.user">
