--- a/mean/public/modules/core/views/header.client.view.html
+++ b/mean/public/modules/core/views/header.client.view.html
@@ -30,6 +30,11 @@
 			</li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">
+			<li>
+				<a href="/#!/worklist">
+					<span>Work List</span>
+				</a>
+			</li>
 			<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 					<span data-ng-bind="authentication.user.displayName"></span> <b class="caret"></b>
