closed user story 15 with progress bar described in #39. it should still be added to the next form of project listing table we use, however.  also fixed formatting of description & etc in project view page

--- a/mean/public/modules/projects/css/projects.css
+++ b/mean/public/modules/projects/css/projects.css
@@ -87,6 +87,12 @@
     cursor: pointer;
 }
 
+.well{
+    background-color: #fdfdfd;
+    background-image: none;
+    margin-top: 10px;
+}
+
 .ngReactGrid table tr:hover{
     background: #dbdbdb;
 }
