--- a/mean/public/modules/projects/css/projects.css
+++ b/mean/public/modules/projects/css/projects.css
@@ -83,6 +83,16 @@
     z-index: 20;
 }
 
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor:default;
+}
+
 .ngReactGridBody:hover{
     cursor: pointer;
 }
